--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eth-key-lib-js",
   "version": "0.0.1",
-  "main": "index.js",
+  "main": "dist/index-cjs.js",
   "repository": "https://github.com/funderstoken/eth-key-lib-js.git",
   "author": "funderstoken",
   "license": "MIT",
@@ -11,7 +11,11 @@
       "pre-commit": "pretty-quick --staged"
     }
   },
+  "scripts": {
+    "build": "rollup -c"
+  },
   "dependencies": {
+    "crypto-browserify": "^3.12.0",
     "ethereumjs-tx": "^1.3.6",
     "ethereumjs-wallet": "^0.6.0",
     "ethjs-account": "^0.1.4",
@@ -22,6 +26,11 @@
     "husky": "^0.14.3",
     "prettier": "1.13.7",
     "pretty-quick": "^1.6.0",
-    "rollup": "^0.63.2"
+    "rollup": "^0.63.2",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-json": "^3.0.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.2.1",
+    "rollup-plugin-node-resolve": "^3.3.0"
   }
 }
