--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "build": "rollup -c"
   },
   "dependencies": {
-    "crypto-browserify": "^3.12.0",
     "ethereumjs-tx": "^1.3.6",
     "ethereumjs-wallet": "^0.6.0",
     "ethjs-account": "^0.1.4",
@@ -25,12 +24,6 @@
   "devDependencies": {
     "husky": "^0.14.3",
     "prettier": "1.13.7",
-    "pretty-quick": "^1.6.0",
-    "rollup": "^0.63.2",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-json": "^3.0.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.2.1",
-    "rollup-plugin-node-resolve": "^3.3.0"
+    "pretty-quick": "^1.6.0"
   }
 }
