--- a/package.json
+++ b/package.json
@@ -6,13 +6,9 @@
   "author": "funderstoken",
   "license": "MIT",
   "private": false,
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
-  },
   "scripts": {
-    "build": "rollup -c"
+    "build": "",
+    "pre-commit": "pretty-quick --staged"
   },
   "dependencies": {
     "ethereumjs-tx": "^1.3.6",
@@ -23,7 +19,7 @@
   },
   "devDependencies": {
     "husky": "^0.14.3",
-    "prettier": "1.13.7",
+    "prettier": "^1.13.7",
     "pretty-quick": "^1.6.0"
   }
 }
