--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": false,
   "scripts": {
     "build": "",
-    "pre-commit": "pretty-quick --staged"
+    "precommit": "pretty-quick --staged"
   },
   "dependencies": {
     "ethereumjs-tx": "^1.3.6",
