--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
     "precommit": "pretty-quick --staged"
   },
   "dependencies": {
-    "ethereumjs-tx": "^1.3.6",
-    "ethereumjs-wallet": "^0.6.0",
+    "ethereumjs-tx": "^1.3.7",
+    "ethereumjs-wallet": "^0.6.2",
     "keccak": "^1.4.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/polyfill": "^7.0.0-beta.54",
-    "@babel/preset-env": "^7.0.0-beta.54",
-    "babel-loader": "^8.0.0-beta",
+    "@babel/core": "^7.1.2",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.19",
-    "husky": "^0.14.3",
-    "prettier": "^1.13.7",
-    "pretty-quick": "^1.6.0",
-    "webpack": "^4.16.1",
-    "webpack-cli": "^3.1.0"
+    "husky": "^1.1.2",
+    "prettier": "^1.14.3",
+    "pretty-quick": "^1.8.0",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2"
   }
 }
