--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "> 5%"
   ],
   "scripts": {
-    "build": "webpack",
-    "precommit": "pretty-quick --staged"
+    "build": "webpack"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "dependencies": {
     "ethereumjs-tx": "^1.3.7",
