--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "eth-key-lib-js",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "index.js",
-  "repository": "https://github.com/funderstoken/eth-key-lib-js.git",
-  "author": "funderstoken",
+  "repository": "https://github.com/fstnetwork/eth-key-lib-js.git",
+  "author": "fstnetwork",
   "license": "MIT",
   "private": false,
   "browserslist": [
@@ -19,20 +19,20 @@
   },
   "dependencies": {
     "ethereumjs-tx": "^1.3.7",
-    "ethereumjs-wallet": "^0.6.2",
+    "ethereumjs-wallet": "^0.6.3",
     "keccak": "^1.4.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
+    "@babel/core": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
-    "babel-loader": "^8.0.4",
+    "@babel/preset-env": "^7.0.0",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^0.1.19",
-    "husky": "^1.1.2",
-    "prettier": "^1.14.3",
-    "pretty-quick": "^1.8.0",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "husky": "^1.3.1",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1",
+    "webpack": "^4.39.0",
+    "webpack-cli": "^3.3.6"
   }
 }
